# packages/checkout/wallet/src/types.ts
@@ -50,4 +50,15 @@ export interface CheckoutPerformActionOptions {
    * This typically contains user input or challenge-response data.
    */
   payload?: string;
+
+  /**
+   * Authorization token used to authorize the MFA requests.
+   * This token is typically generated by your backend and should be passed
+   * securely to authenticate the operation.
+   *
+   * More info: https://docs.dev.loginid.io/backend-integration/generating-authz-tokens/
+   */
+  authzToken?: string;
+
+  username?: string;
 }
