# packages/core/src/controllers/types.ts
@@ -91,6 +91,15 @@ export interface MfaBeginOptions {
    * enabling secure transaction confirmation without revealing end-user identity to the merchant.
    */
   checkoutId?: string;
+
+  /**
+   * Authorization token used to authorize the MFA  requests.
+   * This token is typically generated by your backend and should be passed
+   * securely to authenticate the operation.
+   *
+   * More info: https://docs.dev.loginid.io/backend-integration/generating-authz-tokens/
+   */
+  authzToken?: string;
 }
 
 /**
